--- a/plugins/AIS/AISSearch/AISSearch2.css
+++ b/plugins/AIS/AISSearch/AISSearch2.css
@@ -214,33 +214,79 @@
   font-weight: bold;
 }
 
-.ais_myfleet_dialog .menu div {
-  text-decoration: underline;
-  color: #000;
-  margin-bottom: 10px;
-  cursor:pointer;
-}
-/*
-.ais_myfleet_dialog .addremove{
-  text-decoration: underline;
-  color: #000;
+.ais_myfleet_dialog .menubuttons {
+  width:178px;
   text-align: center;
-  margin-top: 20px;
-  cursor:pointer;
+  margin-top: 10px;
 }
-*/
-.ais_myfleet_dialog .addremove.disabled{
-  color: #999;
+
+.ais_myfleet_dialog .menubuttons::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.ais_myfleet_dialog .menu div.button {
+  width:30px;
+  height:30px;
+  background-color: #738694;    
+  cursor:pointer;
+  float: left;
+  margin-right: 5px;
+  border-radius: 3px;
+}
+
+.ais_myfleet_dialog .menu div.button.active{
+  background-color: #3ca1d0; 
+  padding:0;
+}
+
+.ais_myfleet_dialog .menu div.button.disabled{
+  background-color: #ced9e0; 
   cursor: default;
+}
+
+.ais_myfleet_dialog .menu div.button.disabled:hover{
+  background-color: #ced9e0; 
+  cursor: default;
+}
+
+.ais_myfleet_dialog .menu div.button:hover {
+  background-color: #3ca1d0; 
+}
+
+.ais_myfleet_dialog .menu .progress{
+  padding-top:10px;
+  float:left;
+}
+
+.ais_myfleet_dialog .openpage{
+  background: url(http://maps.kosmosnimki.ru/api/plugins/AIS/AISSearch/svg/info.svg) no-repeat center center;
+}
+
+.ais_myfleet_dialog .showpos{
+  background: url(http://maps.kosmosnimki.ru/api/plugins/AIS/AISSearch/svg/target.svg) no-repeat center center;
+}
+
+.ais_myfleet_dialog .showtrack{
+  background: url(http://maps.kosmosnimki.ru/api/plugins/AIS/AISSearch/svg/path.svg) no-repeat center center;
+}
+
+.ais_myfleet_dialog .addremove{
+  background: url(http://maps.kosmosnimki.ru/api/plugins/AIS/AISSearch/svg/add-my-fleet.svg) no-repeat center center;
 }
 
 .ais_myfleet_dialog .addremove.disabled i{
   color: #000;
 }
 
-.ais_myfleet_dialog .photo{
-  /*float:left;*/
-  height:120px
+
+.ais_myfleet_dialog .photo div{
+  width:178px;
+  height:110px;
+  background: url(http://maps.kosmosnimki.ru/api/plugins/AIS/AISSearch/svg/no-image.svg) no-repeat center center;
+  background-color: #ced9e0;
+  background-size: 48px 48px;
 }
 
 
