Finish new layersControl

--- a/leaflet/plugins/gmxLayers2/gmxLayers2.css
+++ b/leaflet/plugins/gmxLayers2/gmxLayers2.css
@@ -4,8 +4,7 @@
 }
 
 .leaflet-control-layers {
-    position: absolute;
-	/*width: 130px;*/
+    position: fixed;
 }
 
 .leaflet-control-layers-bottom {
