--- a/common_components/adapter.css
+++ b/common_components/adapter.css
@@ -80,9 +80,9 @@
 }
 
 .headerWidget-logoContainer {
-    width: 360px;
-    height: 60px;
-    padding: 0px;
+    width: 150px;
+    height: 40px;
+    padding: 0;
 }
 
 .dropdownMenuWidget-item a {
