Remove suggestions list

--- a/common_components/adapter.css
+++ b/common_components/adapter.css
@@ -46,6 +46,14 @@
 }
 
 /* Auth widget */
+.authWidget .ui-widget {
+    float: right;
+}
+
+.languageWidget .ui-widget {
+    float: right;
+}
+
 .auth-user-name, .auth-login {
     font-size: 12px;
 }
