Add coordinates and cadastre hooks

--- a/common_components/adapter.css
+++ b/common_components/adapter.css
@@ -46,11 +46,11 @@
 }
 
 /* Auth widget */
-.authWidget .ui-widget {
+.authWidget {
     float: right;
 }
 
-.languageWidget .ui-widget {
+.languageWidget {
     float: right;
 }
 
