--- a/src/HeaderWidget/assets/styles.less
+++ b/src/HeaderWidget/assets/styles.less
@@ -70,3 +70,34 @@
 
 .headerWidget .searchCenter { height: 14px; }
 .headerWidget .searchEnd { height: 22px; }
+
+.headerWidget-barCell.headerWidget-languageContainer {
+    display: inline-block;
+    position: relative;
+    float: right;
+    top: 10px;
+    margin-right: 20px;
+
+
+}
+
+
+.headerWidget-barCell.headerWidget-authContainer {
+    position: relative;
+    display: inline-block;
+    float: right;
+    top: 12px;
+    margin-right: 10px;
+}
+
+div#header {
+    white-space: nowrap;
+    overflow: hidden;
+    /* overflow-x: scroll; */
+}
+
+.authWidget .dropdownMenuWidget-itemDropdown {
+    right: 0;
+    min-width: 150px;
+    position: fixed;
+}
