--- a/leaflet/leafletGmx.css
+++ b/leaflet/leafletGmx.css
@@ -65,24 +65,40 @@
     background-color: #FFF;
 }
 
-.leaflet-bottom .leaflet-control {
-    /*left: 40px;*/
-    /*right: 0px;*/
-}
-
-.leaflet-top .leaflet-control {
-    /*left: 40px;*/
-    /*right: 0px;*/
-}
-
-.leaflet-top.leaflet-left {
-    /*left: 40px;*/
-}
-
 .leaflet-gmx-copyright-location {
     left: 40px;
 }
 
 .leaflet-gmx-copyright-location-bg {
     left: 40px;
+}
+
+.leaflet-top.leaflet-right.leaflet-bottom {
+    max-width: 35px;
+}
+
+.leaflet-top.leaflet-right.leaflet-bottom  .leaflet-control{
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.leaflet-gmx-iconSvg {
+	text-align: center;
+    height: 24px;
+
+	border-radius: 4px;
+	background-color: rgb(255, 255, 255);
+	box-shadow: 0px 3px 4.7px 0.3px rgba(0, 0, 0, 0.24);
+	fill: #757575;
+
+    clear: none;
+    cursor: pointer;
+    display: block;
+    float: left;
+    margin-left: 4px;
+    position: relative;
+}
+
+.leaflet-gmx-icon-groupSvg {
+	 box-shadow: none; 
 }
