--- a/leaflet/leafletGmx.css
+++ b/leaflet/leafletGmx.css
@@ -60,6 +60,26 @@
     height: 100%;
 }
 
+.iconSidebarControl_opened {
+    width: 400px !important;
+}
+
+/*.iconSidebarControl {
+    margin: 0;
+}*/
+
+.leaflet-top .leaflet-control.iconSidebarControl,
+.leaflet-left .leaflet-control.iconSidebarControl,
+.leaflet-bottom .leaflet-control.iconSidebarControl {
+    margin-left: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+ }
+
+.iconSidebarControl-content {
+    background-color: #FFF;
+}
+
 @media screen and (max-width: 1300px) {
 .leaflet-ext-search input {
     width: 150px;
