--- a/plugins/AIS/AISSearch/AISSearch2.css
+++ b/plugins/AIS/AISSearch/AISSearch2.css
@@ -185,6 +185,12 @@
   font-size:10px;
   color: #CCC
 }
+.ais_view .ais_vessels .date .small{
+  display: none;
+}
+.ais_view .ais_vessels .date br{
+  display: none;
+}
 .ais_view .ais_vessel:first-of-type{
   margin-top:0;
 }
