--- a/plugins/AIS/AISSearch/AISSearch2.css
+++ b/plugins/AIS/AISSearch/AISSearch2.css
@@ -388,6 +388,13 @@
             font-size: 10px;
             font-weight:normal;
         }
+        .vessel-info-page .column1 .title .timestamp .small{
+            font-size: 10px;
+            font-weight:normal;
+        }
+        .vessel-info-page .column1 .title .timestamp br{
+            display:none;
+        }	
         .vessel-info-page .column1 .menu-item{
             line-height:14px;
             cursor: pointer;
