--- a/css/AttrTable.css
+++ b/css/AttrTable.css
@@ -115,3 +115,9 @@
 .attr-table-geom-placeholder {
     color: #215570;
 }
+
+.attrsColumnsList {
+    position: absolute;
+    background-color: white;
+    box-shadow: rgba(100, 100, 100, 0.7) 0px 0px 3px;
+}
