--- a/css/AttrTable.css
+++ b/css/AttrTable.css
@@ -70,6 +70,7 @@
     width: 300px;
     height: 100px;
     margin-right: 6px;
+    resize: none;
 }
 
 .attr-table-query-suggest {
@@ -138,16 +139,26 @@
     float: right;
 }
 
+.attr-table-hide-button-container {
+    margin-top: 10px;
+    margin-bottom: 14px;
+}
+
 .search-button {
     margin-left: 5px;
 }
 
-.attr-table-hide-button-container {
-    margin-top: 10px;
-    margin-bottom: 7px;
+.clean-button {
+    float: right;
+    margin-right: 6px;
 }
 
 .clean-search-buttons-container {
     position: absolute;
     bottom: 8px;
+}
+
+#attrsTableParent table {
+  border-spacing: 0;
+  border-collapse: separate;
 }
