--- a/css/AttrTable.css
+++ b/css/AttrTable.css
@@ -69,7 +69,7 @@
 .attr-table-query-area {
     width: 300px;
     height: 100px;
-    margin-right: 6px;
+    margin: 6px 6px 0 0;
     resize: none;
 }
 
@@ -125,12 +125,14 @@
 }
 
 .attrsColumnsList {
+    z-index: 1000;
     padding: 5px;
+    padding-top: 2px;
     position: absolute;
     max-height: 310px;
     overflow: auto;
     right: 8px;
-    margin: 4px 7px 0 0;
+    margin: -16px 7px 0 0;
     background-color: white;
     box-shadow: rgba(100, 100, 100, 0.7) 0px 0px 3px;
 }
@@ -141,7 +143,7 @@
 
 .attr-table-hide-button-container {
     margin-top: 10px;
-    margin-bottom: 14px;
+    margin-bottom: 10px;
 }
 
 .search-button {
@@ -150,7 +152,7 @@
 
 .clean-button {
     float: right;
-    margin-right: 6px;
+    margin: 0 6px 0px 0;
 }
 
 .clean-search-buttons-container {
