--- a/css/AttrTable.css
+++ b/css/AttrTable.css
@@ -134,10 +134,12 @@
     right: 8px;
     margin: -16px 7px 0 0;
     background-color: white;
+    min-width: 115px;
     box-shadow: rgba(100, 100, 100, 0.7) 0px 0px 3px;
 }
 
 .show-columns-list-button {
+    padding-top: 1px;
     float: right;
 }
 
