--- a/css/menu.css
+++ b/css/menu.css
@@ -22,7 +22,7 @@ div.header1Internal
 	font-weight: normal;
 	padding: 8px 10px 8px 10px;
 	background: transparent;
-    cursor: default;
+    cursor: pointer;
 }
 div.header1
 {
@@ -103,6 +103,7 @@ div.header3.menuDisabled
 div.header1.menuActive  .header1Internal{
     /* font-weight: bold; */
     color: #2372B9;
+	/* background-color: #3498db; */
 }
 
 div.header1.menuActive div.header1
