--- a/css/menu.css
+++ b/css/menu.css
@@ -102,8 +102,8 @@ div.header3.menuDisabled
 
 div.header1.menuActive  .header1Internal{
     /* font-weight: bold; */
-    color: #2372B9;
-	/* background-color: #3498db; */
+    color: #3498db;
+	background-color: #efefef;
 }
 
 div.header1.menuActive div.header1
