--- a/css/common.css
+++ b/css/common.css
@@ -1966,3 +1966,16 @@ leaflet-control-layers-toggle {
 	margin-right: 5px;
 	margin-left: -17px;
 }
+
+.vlayer-container {
+}
+
+.vlayer-label {
+    width: 70px;
+    display: inline-block;
+    margin: 10px 4px 0px 3px;
+}
+
+.vlayer-contentid {
+    width: 100px;
+}
