--- a/css/common.css
+++ b/css/common.css
@@ -276,7 +276,7 @@ div.user span
 
 .leftPanelHeader
 {
-    position: absolute;
+    position: inherit;
 	left: 0px;
 	top: 0px;
     width: 100%;
@@ -296,7 +296,7 @@ div.user span
 	width: 360px;
 	overflow-x: hidden;
 	overflow-y: auto;
-    position: absolute;
+    position: inherit;
 }
 .layerManager
 {
