--- a/plugins/AIS/AISSearch/src/Views/VesselInfoScreen.css
+++ b/plugins/AIS/AISSearch/src/Views/VesselInfoScreen.css
@@ -114,7 +114,7 @@
            display:none;
            font-size: 10px;
            border-radius: 4px;
-           padding:0 7px 2px 6px;
+           padding:2px 7px 2px 7px;
            background-color: #3ca1d0;
            border:none;
            color: white;
