--- a/plugins/AIS/AISSearch/test/AISSearch2.css
+++ b/plugins/AIS/AISSearch/test/AISSearch2.css
@@ -105,7 +105,7 @@
  }
 
 .ais_view .ais_vessels{
-  color:#182026;
+  color:#394b59;
 }
   .ais_view .ais_vessels .msg{
     text-align: center;
@@ -483,6 +483,43 @@
   -ms-transform: rotate(345deg);
   -o-transform: rotate(345deg);
   transform: rotate(345deg);
+}
+
+.ais_view input:checked + .switch-slider {
+  background-color: #48aff1;
+}
+.ais_view.myfleet_view .ais_vessel table td:first-of-type{
+  width:8%;
+}
+.ais_view.myfleet_view table.results td:nth-of-type(1){
+  width:1%;
+}
+.ais_view.myfleet_view table.results td:nth-of-type(2){
+  width:90%;
+}
+.ais_view.myfleet_view .ais_vessel .course{
+  display:block;
+}
+.ais_view.myfleet_view .ais_vessel .date{
+  display:block;
+}
+.ais_view.myfleet_view .ais_vessel:hover .course{
+  display:none;
+}
+.ais_view.myfleet_view .ais_vessel:hover .date{
+  display:none;
+}
+.ais_view.myfleet_view .ais_vessel .info{
+  display:none;
+}
+.ais_view.myfleet_view .ais_vessel:hover .info{
+  display:block;
+}
+.ais_view.myfleet_view .ais_vessel .exclude{
+  display:none;
+}
+.ais_view.myfleet_view .ais_vessel:hover .exclude{
+  display:block;
 }.ais_view.search_view .suggestions{
     background-color: white;
     position:absolute;
@@ -530,6 +567,7 @@
 .ais_history .message{
     text-align: center;
     font-weight: 700;
+    margin-top: 15px;
 }
 
 .ais_history .ais_positions_date{
@@ -810,13 +848,13 @@
     padding-left: 20px;
     padding-right: 15px;
     width: 185px;
-	border-right: solid 1px white
+	border-right: solid 1px #f5f8fa
 }
 .ais_myfleet_dialog .column2 {
     float: left;
     padding-top: 12px;
     width: 340px;
-	border-right: solid 1px white
+	border-right: solid 1px #f5f8fa
 }
 .ais_myfleet_dialog .column3 {
     float: left;
