--- a/plugins/AIS/AISSearch/test/AISSearch2.css
+++ b/plugins/AIS/AISSearch/test/AISSearch2.css
@@ -520,6 +520,10 @@
 }
 .ais_view.myfleet_view .ais_vessel:hover .exclude{
   display:block;
+}
+
+.ais_view.myfleet_view .ais_vessel:hover .exclude:hover{
+  background: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg'%3E%3Cline x1='0' y1='0' x2='12' y2='12' style='stroke:%23ff0000;stroke-width:2px'/%3E%3Cline x1='0' y1='12' x2='12' y2='0' style='stroke:%23ff0000;stroke-width:2px'/%3E%3C/svg%3E") no-repeat;
 }.ais_view.search_view .suggestions{
     background-color: white;
     position:absolute;
