--- a/css/common.css
+++ b/css/common.css
@@ -1983,3 +1983,10 @@ leaflet-control-layers-toggle {
 .multistyle-visibility-icon {
 	width: 20px;
 }
+
+/* Для ограничения балунов */
+.leaflet-popup-content-wrapper .leaflet-popup-content {
+    max-height: 400px;
+    max-width: 480px;
+    overflow: auto;
+}
